--- a/.github/workflows/update-game-list.yml
+++ b/.github/workflows/update-game-list.yml
@@ -12,5 +12,5 @@ jobs:
         uses: actions-go/push@v1 # pushing the changes to the repo
         with:
           force: true
-          commit-files: gamedir.txt
+          commit-files: ./games/gamedir.txt
           commit-message: Updated list of games
